--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://kero0000.cmv7mcu7zaok.us-west-2.rds.amazonaws.com:3306/EMA
+spring.datasource.url = jdbc:mysql://ema.cmv7mcu7zaok.us-west-2.rds.amazonaws.com:3306/EMA
 spring.datasource.username = root
 spring.datasource.password=Diamondprox123
 spring.jpa.show-sql=true
