--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://ema.cmv7mcu7zaok.us-west-2.rds.amazonaws.com:3306/EMA
+spring.datasource.url = ${datasourceurl}
 spring.datasource.username = root
-spring.datasource.password=Diamondprox123
+spring.datasource.password=${password}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
